Todos los views menos el de encargos

--- a/Proyecto/AppShell.xaml
+++ b/Proyecto/AppShell.xaml
@@ -4,6 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Proyecto"
+    xmlns:views="clr-namespace:Proyecto.Views"
     Shell.FlyoutBehavior="Flyout"
     Title="Proyecto">
 
@@ -11,5 +12,20 @@
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
+
+    <ShellContent
+        Title="Clientes"
+        ContentTemplate="{DataTemplate views:ClientesPage}"
+        Route="ClientePage" />
+    
+    <ShellContent
+     Title="Apartados"
+     ContentTemplate="{DataTemplate views:ApartadosPage}"
+     Route="ApartadosPage" />
+    
+    <ShellContent
+     Title="Inventario"
+     ContentTemplate="{DataTemplate views:InventarioPage}"
+     Route="InventarioPage" />
 
 </Shell>
