--- a/Proyecto/MainPage.xaml
+++ b/Proyecto/MainPage.xaml
@@ -4,32 +4,37 @@
              x:Class="Proyecto.MainPage">
 
     <ScrollView>
+       
         <VerticalStackLayout
+            BackgroundColor="White"
             Padding="30,0"
-            Spacing="25">
+            Spacing="25"
+            
+            >
             <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
+                Source="galaluna.jpg"
+                Margin="0,100,0,0"
+                HeightRequest="220"
                 Aspect="AspectFit"
                 SemanticProperties.Description="dot net bot in a hovercraft number nine" />
 
             <Label
-                Text="Hello, World!"
+                Text=""
+                FontSize="50"
+                TextColor="DarkGoldenrod"
+                FontFamily="Montserrat"
                 Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level1" />
 
             <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
+                Text="¡Nos encanta la moda!"
+                FontFamily="Montserrat"
+                FontAttributes="Italic"
                 Style="{StaticResource SubHeadline}"
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+            
         </VerticalStackLayout>
     </ScrollView>
 
